tests/test180.rael.exp
Error [tests/test180.rael:2:17]: Not enough arguments
| log :Types:Range()
|                 ^
