tests/test180.rael
load :Types
log :Types:Range()
